<resources>
    <string name="app_name">Trash to Treasure</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="title_menu_1" translatable="false">Foto sampah</string>
    <string name="title_menu_2" translatable="false">Deteksi sampah</string>
    <string name="title_menu_3" translatable="false">Rekomendasi produk daur ulang</string>
    <string name="title_menu_4" translatable="false">Mulai Daur ulang</string>
    <string name="desc_menu_1" translatable="false">Siapkan sampah yang ingin di daur ulang seperti boto plastik, kemudian foto sampah tersebut melalui aplikasi</string>
    <string name="desc_menu_2" translatable="false">Sampah yang di foto akan di deteksi menggunakan machine learning untuk mengidentifikasi sampah</string>
    <string name="desc_menu_3" translatable="false">Sampah yang telah di scan akan menampilkan data dan rekomendasi produk hasil daur ulang</string>
    <string name="desc_menu_4" translatable="false">Daftarkan akunmu dan mulailah daur ulang sekarang</string>
    <string name="learn_now" translatable="false">Mulai Sekarang</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifikasi</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_camera">Kamera</string>
    <string name="title_list">List</string>
    <string name="title_profile">Profil</string>
    <string name="title">Artikel</string>
    <string name="published_date">May 22, 2023</string>
    <string name="error_occurred">Tidak Bisa Memuat Data</string>
    <string name="profile_name">Bayu Afriyadi</string>
    <string name="profile_email">bayuafriyadi5@gmail.com</string>
    <string name="change_language">Ganti Bahasa</string>
    <string name="notifications">Notifikasi</string>
    <string name="feedback">Feedback</string>
    <string name="home_name">Hi,Ujang maman</string>
    <string name="artikel_title" translatable="false">Artikel</string>
    <string name="retry">Coba Lagi</string>
    <string name="login_google" translatable="false">Masuk dengan Google</string>
    <string name="change_Theme">Ganti Tema</string>
    <string name="dark_mode">Mode Gelap </string>
    <string name="sign_out">Keluar</string>
    <string name="login_subtitle">Daur ulang jadi lebih mudah karena Trash to Treasure</string>
    <string name="plasctic_waste">Sampah Plastik</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="glass_waste">Sampah Kaca</string>
    <string name="metal_waste">Sampah Metal</string>
    <string name="cloth_waste">Sampah Kain</string>
    <string name="capture_image">Capture Image</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="opening_camera">Membuka Kamera</string>
    <string name="opening_gallery">Membuka Gallery</string>
    <string name="import_picture">Memasukan Gambar</string>
    <string name="permission_not_granted">Permission tidak diberikan</string>
    <string name="failed_open_camera">Gagal Membuka Kamera</string>
    <string name="tab_plastic_1">Deskripsi</string>
    <string name="tab_plastic_2">Rekomendasi</string>
    <string name="cara_membuat">Cara Membuat</string>
    <string name="take_a_picture_of_your_trash">Ambil foto dari sampah anda</string>
    <string name="feedback_hint">Feedback</string>
    <string name="alert_feedback">Feedback anda telah di kirim</string>
    <string name="alert_logout">Anda yakin ingin keluar?</string>
    <string name="send_feedback">Kirim Feedback</string>
    <string name="read_more">Baca Selengkapnya</string>
    <string name="register">Daftarkan Akunmu dan mulai daur ulang</string>
    <string name="regis_nama">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="telepon">Telepon</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="alamat">Alamat</string>
    <string name="select_image">Please Select and Image!</string>
    <string name="update_akun">Update Akun</string>
    <string name="marketplace">Marketplace</string>
    <string name="no_rekening">No Rekening</string>
    <string name="product_name">Product Name</string>
    <string name="your_address">Your Address</string>
    <string name="haur_pancuh_jl_sukasari_2_rt_06_rw_02_no_24">Haur pancuh, jl. sukasari 2 Rt 06, Rw 02 No. 24</string>
    <string name="rp_65_000">Rp 65.000</string>
    <string name="deliver_order">Kirim Pesanan</string>
    <string name="description_order">Deskripsi</string>
    <string name="stock_product">Stok Produk</string>
    <string name="update_product">Update Produk</string>
    <string name="register_seller">Daftar Penjual</string>
    <string name="update_seller">Update Penjual</string>
    <string name="search_product">Cari Produk</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="register_as_seller">Daftar Menjadi Penjual</string>
    <string name="my_orders">Pesanan Saya</string>
    <string name="my_product">Produk Saya</string>
    <string name="sell">Jual Produk</string>
    <string name="transaction">Transaksi</string>
    <string name="product_list">Daftar Produk</string>
    <string name="see_all_my_products">Lihat semua daftar Produk</string>
    <string name="my_transaction">Transaksi Saya</string>
    <string name="see_all_my_transaction">Lihat semua transaksi saya</string>
    <string name="no_data">Tidak Ada Data</string>
    <string-array name="bank_list">
        <item>BCA</item>
        <item>BNI</item>
        <item>BRI</item>
        <item>MANDIRI</item>
        <item>MEGA</item>
        <item>BTPN</item>
        <item>PERMATA</item>
    </string-array>
</resources>